tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__GottaPumpItUp-AAAAAAAAAAAAAAAAAAALnA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2972,
  "prerequisites": [
    2971
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you made it this far you may have already noticed that you cannot pour vanilla water into the dam. That's what a HydroEnergy Pump is for. This multi-block exists in multiple tiers and will allow you to reach higher water levels (= more energy capacity). Provide the pump with vanilla water as input and pipe the fluid output into the dam. Then the dam will slowly fill up. If the dam is full or full for a pump's voltage tier, it will void the water and energy.\n\nThat's all folks! Nothing too fancy here.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gotta Pump It Up",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2971
  ],
  "rewards": [],
  "tasks": []
}
