tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__HVBattery-AAAAAAAAAAAAAAAAAAAEeA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1144,
  "prerequisites": [
    1143
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Better machines need some better batteries. Lithium is the best material to use when making batteries, at least for LV-HV.\n\n[note]You only need to complete one task.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "HV Battery",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1143
  ],
  "rewards": [],
  "tasks": []
}
