tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__HVBatteryBuffers-AAAAAAAAAAAAAAAAAAAEdg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1142,
  "optional_prerequisites": [
    789,
    1144
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "You'll probably want HV battery buffers as well.\n\n[note]You only need to complete one task.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "HV Battery Buffers",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
