tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__HVBatteryHulls-AAAAAAAAAAAAAAAAAAAEdw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1143,
  "optional_prerequisites": [
    160,
    758
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Better machines need better batteries. Let's make some HV battery hulls for new batteries.\n\nIt's up to you what kind of battery to make, but realistically you'll probably make Sodium or Lithium.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "HV Battery Hulls",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
