tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__IV16AHatches--H2HWiVlTn-1IT2aaXhLkg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2694646261188414354,
  "prerequisites": [
    8128521624919278957
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These ones do 16A.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "IV 16A Hatches",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8128521624919278957
  ],
  "rewards": [],
  "tasks": []
}
