tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__IV4AHatches-crSDPHDOT1m9OXmI4mUFbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8128521624919278957,
  "prerequisites": [
    2830
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Same as the EV Multi-amp hatches, use these to extract and insert many amps from your LSC.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "IV 4A Hatches",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2830
  ],
  "rewards": [],
  "tasks": []
}
