tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__IV64AHatches-UuBSfl0oRLqUL92DUyXMOw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6712690811645316155,
  "prerequisites": [
    2694646261188414354
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The final multi-amp hatches for IV, 64A!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "IV 64A Hatches",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2694646261188414354
  ],
  "rewards": [],
  "tasks": []
}
